@@ -68,6 +68,7 @@ export(as.wfm)
 export(bigrams)
 export(changeunits)
 export(clean)
+export(cleanC)
 export(collocations)
 export(convert)
 export(corpus)
@@ -109,7 +110,8 @@ export(texts)
 export(tf)
 export(tfidf)
 export(tokenize)
-export(tokenizeOnlyCpp)
+export(tokenizeOnlyCppKB)
+export(tokenizeOnlyCppKW)
 export(tokenizeOnlyScan)
 export(topfeatures)
 export(trim)
