@@ -1,8 +1,16 @@
 # This file was generated by Rcpp::compileAttributes
 # Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
 
+cleancpp <- function(x, toLower, removeDigits, removePunct, removeTwitter, removeURL, removeAdditional) {
+    .Call('quanteda_cleancpp', PACKAGE = 'quanteda', x, toLower, removeDigits, removePunct, removeTwitter, removeURL, removeAdditional)
+}
+
 tokenizecpp <- function(x, sep, minLength, toLower, removeDigits, removePunct, removeTwitter, removeURL, removeAdditional) {
     .Call('quanteda_tokenizecpp', PACKAGE = 'quanteda', x, sep, minLength, toLower, removeDigits, removePunct, removeTwitter, removeURL, removeAdditional)
+}
+
+justTokenizeCpp <- function(x, sep, minLength) {
+    .Call('quanteda_justTokenizeCpp', PACKAGE = 'quanteda', x, sep, minLength)
 }
 
 wordfishcpp <- function(wfm, dir, priors, tol) {
