@@ -4,6 +4,7 @@
 \alias{clean}
 \alias{clean.character}
 \alias{clean.corpus}
+\alias{cleanC}
 \title{simple cleaning of text before processing}
 \usage{
 clean(x, ...)
@@ -14,6 +15,9 @@ clean(x, ...)
 
 \method{clean}{corpus}(x, removeDigits = TRUE, removePunct = TRUE,
   toLower = TRUE, removeAdditional = NULL, removeTwitter = FALSE, ...)
+
+cleanC(x, removeDigits = TRUE, removePunct = TRUE, toLower = TRUE,
+  removeAdditional = NULL, removeTwitter = FALSE, removeURL = TRUE, ...)
 }
 \arguments{
 \item{x}{The object to be cleaned. Can be either a character vector or a
@@ -46,6 +50,10 @@ steps is optional, but switched on by default, so for example, to remove
 punctuation and convert to lower, but keep digits, the command would be:
 \code{clean(mytexts, removeDigits=FALSE)}
 }
+\details{
+\code{cleanC} is KB's adaptation from KW's code for tokenization and cleaning,
+for testing.
+}
 \examples{
 clean("This is 1 sentence with 2.0 numbers in it, and one comma.", removeDigits=FALSE)
 clean("This is 1 sentence with 2.0 numbers in it, and one comma.", toLower=FALSE)
@@ -59,5 +67,25 @@ clean("URL regex from http://daringfireball.net/2010/07/improved_regex_for_match
 # for a vector of texts
 clean(c("This is 1 sentence with 2.0 numbers in it, and one comma.",
         "$1.2 billion was spent on text analysis in 2014."))
+cleanC("This is 1 sentence with 2.0 numbers in it, and one comma.", removeDigits=FALSE)
+cleanC("This is 1 sentence with 2.0 numbers in it, and one comma.", toLower=FALSE)
+cleanC("We are his Beliebers, and him is #ourjustin @justinbieber we luv u", removeTwitter=TRUE)
+cleanC("Collocations can be represented as inheritance_tax using the _ character.")
+cleanC("But under_scores can be removed with removeAdditional.", removeAdditional="[_]")
+cleanC("This is a $1,500,000 budget and $20bn cash and a $5 cigar.")
+cleanC("This is a $1,500,000 budget and $20bn cash and a $5 cigar.", removeDigits=FALSE)
+clean("URL regex from http://daringfireball.net/2010/07/improved_regex_for_matching_urls.")
+
+\donttest{# on a single long text
+mobydick <- texts(corpus(textfile("~/Dropbox/QUANTESS/corpora/project_gutenberg/pg2701.txt")))
+system.time(tmp <- cleanC(mobydick)) # .218 seconds
+system.time(tmp <- clean(mobydick))  # .776 seconds
+
+# on a longer set of texts (34,070 texts)
+load('~/Dropbox/QUANTESS/Manuscripts/Collocations/Corpora/lauderdaleClark/Opinion_files.RData')
+txts <- unlist(Opinion_files[1]); names(txts) <- NULL
+system.time(tmp <- sapply(txts, cleanC)) # about 20.5 seconds
+\dontrun{system.time(tmp <- sapply(txts, clean))  # about forever: 647.502 seconds}
+}
 }
 
